--- a/webite/index.html
+++ b/webite/index.html
@@ -8,7 +8,7 @@
     <img src="images/ukraine.png" alt="haha image dont work bozo"/>
     <h1> Ukraine Hub </h1>
     <div class="topnav">
-      <a id=class="active" href="#home">Home</a>
+      <a id=class="active" href="https://drcowiber.github.io">Home</a>
       <a href="https://drcowiber.github.io/childPages/crimea">Crimea</a>
       <a href="childPages/chernobyl">Chernobyl</a>
       <a href="childPages/moldova">Moldova</a>
