--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1> Ukraine Hub </h1>
     <div class="topnav">
       <a id=class="active" href="https://drcowiber.github.io">Home</a>
-      <a href="https://drcowiber.github.io/childPages/crimea">Crimea</a>
+      <a type="html" href="https://drcowiber.github.io/childPages/crimea">Crimea</a>
       <a href="childPages/chernobyl">Chernobyl</a>
       <a href="childPages/moldova">Moldova</a>
     </div>
