page naming and unblank all files

--- a/crimea.html
+++ b/crimea.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Chernobyl</title>
+    <title>Crimea</title>
   </head>
   <body>
-
+ Crimea is in Ukraine
   </body>
   <footer>
 
