--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1> Ukraine Hub </h1>
     <div class="topnav">
       <a id=class="active" href="https://drcowiber.github.io">Home</a>
-      <a type="html" href="https://drcowiber.github.io/childPages/crimea.html">Crimea</a>
-      <a href="childPages/chernobyl">Chernobyl</a>
-      <a href="childPages/moldova">Moldova</a>
+      <a type="html" href="https://drcowiber.github.io/crimea.html">Crimea</a>
+      <a href="https://drcowiber.github.io/chernobyl.html">Chernobyl</a>
+      <a href="https://drcowiber.github.io/moldova.html">Moldova</a>
     </div>
   </header>
   <body>
