--- a/moldova.html
+++ b/moldova.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Crimeas</title>
+    <title>Moldova</title>
   </head>
   <body>
-
+Moldova is in Ukraine
   </body>
   <footer>
 
