--- a/chernobyl.html
+++ b/chernobyl.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Moldova</title>
+    <title>Chernobyl</title>
   </head>
   <body>
-
+    Chernobyl is in Ukraine
   </body>
   <footer>
 
