--- a/chernobyl.html
+++ b/chernobyl.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="CSS/main.css" />
+    <script src="JS/header.js"></script>
     <meta charset="utf-8">
     <title>Chernobyl</title>
+    <div id="heading"> </div>
   </head>
   <body>
     Chernobyl is in Ukraine
   </body>
-  
+
   <footer>
 
   </footer>
