--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     <div id="slavaRgiht" />
   </body>
   <footer>
-    <blockquote cite="https://www.brainyquote.com/quotes/oleksandr_usyk_975671?src=t_ukrainian" />
-    <p class="quote"><strong>I am Ukrainian and fighting like a Ukrainian.</strong></p>
-    <p class="quote"><em><a href="https://www.brainyquote.com/quotes/oleksandr_usyk_975671?src=t_ukrainian" target="_blank">
-      -Oleksandr Usyk </a></em></p>
-    <p class="ending"> &copy Benjamin Fedorak, Powered by Ukraine in GitHub </p>
+    <div>
+      <blockquote cite="https://www.brainyquote.com/quotes/oleksandr_usyk_975671?src=t_ukrainian" />
+      <p class="quote"><strong>I am Ukrainian and fighting like a Ukrainian.</strong></p>
+      <p class="quote"><em><a href="https://www.brainyquote.com/quotes/oleksandr_usyk_975671?src=t_ukrainian" target="_blank">
+        -Oleksandr Usyk </a></em></p>
+      <p class="ending"> &copy Benjamin Fedorak, Powered by Ukraine in GitHub </p>
+    </div>
   </footer>
 
 </html>
