--- a/chernobyl.html
+++ b/chernobyl.html
@@ -3,15 +3,22 @@
   <head>
     <link rel="stylesheet" href="CSS/main.css" />
     <script src="JS/header.js"></script>
+    <script src="JS/footer.js"></script>
+
     <meta charset="utf-8">
     <title>Chernobyl</title>
-    <div id="heading"> </div>
+    <div class="top">
+      <div id="headerHere"></div>
+
+      
+
+    </div>
   </head>
   <body>
     Chernobyl is in Ukraine
   </body>
 
   <footer>
-
+    <div id="footerHere"> </div>
   </footer>
 </html>
