--- a/index.html
+++ b/index.html
@@ -3,38 +3,32 @@
   <meta charset="utf-8" />
   <meta name="author" content="Benjamin Fedorak" />
   <title> Uke Hub </title>
+
+  <script src="JS/header.js"></script>
+  <script src="JS/footer.js"></script>
   <link rel="stylesheet" href="CSS/main.css" />
   <header>
-      <img src="images/ukraine.png" alt="haha image dont work bozo"/>
-      <h1> Ukraine Hub </h1>
-      <div class="topnav">
-        <a id=class="active" href="https://drcowiber.github.io">Home</a>
-        <a type="html" href="https://drcowiber.github.io/crimea.html">Crimea</a>
-        <a href="https://drcowiber.github.io/chernobyl.html">Chernobyl</a>
-        <a href="https://drcowiber.github.io/moldova.html">Moldova</a>
-      </div>
+    <div class="top">
+      <div id="headerHere"></div>
+
+      <div id="slavaLeft"></div>
+        <div id="ukraineIntro">
+          <div id="border" />
+                <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
+                <p>This website is create from the pure love for ukraine,
+                <br/> on this website you shall find all places that capture my interest.
+                </p>
+                <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
+        </div>
+      <div id="slavaRgiht" />
+
+    </div>
   </header>
   <body>
-    <div id="slavaLeft" />
-      <div id="ukraineIntro">
-        <div id="border" />
-              <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
-              <p>This website is create from the pure love for ukraine,
-              <br/> on this website you shall find all places that capture my interest.
-              </p>
-              <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
 
-      </div>
-    <div id="slavaRgiht" />
   </body>
   <footer>
-    <div>
-      <blockquote cite="https://www.brainyquote.com/quotes/oleksandr_usyk_975671?src=t_ukrainian" />
-      <p class="quote"><strong>I am Ukrainian and fighting like a Ukrainian.</strong></p>
-      <p class="quote"><em><a href="https://www.brainyquote.com/quotes/oleksandr_usyk_975671?src=t_ukrainian" target="_blank">
-        -Oleksandr Usyk </a></em></p>
-      <p class="ending"> &copy Benjamin Fedorak, Powered by Ukraine in GitHub </p>
-    </div>
+      <div id="footerHere"></div>
   </footer>
 
 </html>
