--- a/chernobyl.html
+++ b/chernobyl.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+  <header>
     <link rel="stylesheet" href="CSS/main.css" />
     <script src="JS/header.js"></script>
     <script src="JS/footer.js"></script>
@@ -10,10 +10,10 @@
     <div class="top">
       <div id="headerHere"></div>
 
-      
+
 
     </div>
-  </head>
+  </header>
   <body>
     Chernobyl is in Ukraine
   </body>
