--- a/chernobyl.html
+++ b/chernobyl.html
@@ -2,21 +2,22 @@
 <html lang="en" dir="ltr">
   <header>
     <meta charset="utf-8">
+    <meta name="author" content="Benjamin Fedorak" />
     <title>Chernobyl</title>
-
+    <link rel="icon" href="images/ukraine.png">
     <script src="JS/header.js"></script>
     <script src="JS/footer.js"></script>
     <link rel="stylesheet" href="CSS/main.css" />
 
     <div class="top">
       <div id="headerHere"></div>
-
+Chernobyl is in Ukraine
 
 
     </div>
   </header>
   <body>
-    Chernobyl is in Ukraine
+
   </body>
 
   <footer>
