--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <meta charset="utf-8" />
   <meta name="author" content="Benjamin Fedorak" />
   <title> Uke Hub </title>
-
+  <link rel="icon" href="images/ukraine.png">
   <script src="JS/header.js"></script>
   <script src="JS/footer.js"></script>
   <link rel="stylesheet" href="CSS/main.css" />
   <header>
     <div class="top">
       <div id="headerHere"></div>
-
       <div id="slavaLeft"></div>
         <div id="ukraineIntro">
           <div id="border" />
@@ -28,6 +27,7 @@
 
   </body>
   <footer>
+      <div></div>
       <div id="footerHere"></div>
   </footer>
 
