--- a/moldova.html
+++ b/moldova.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+  <header>
     <meta charset="utf-8">
+    <meta name="author" content="Benjamin Fedorak" />
     <title>Moldova</title>
-  </head>
-  <body>
-Moldova is in Ukraine
-  </body>
-  
-  <footer>
+    <link rel="icon" href="images/ukraine.png">
+    <script src="JS/header.js"></script>
+    <script src="JS/footer.js"></script>
+    <link rel="stylesheet" href="CSS/main.css" />
 
+    <div class="top">
+      <div id="headerHere"></div>
+Moldova is in Ukraine
+
+
+    </div>
+  </header>
+  <body>
+
+  </body>
+
+  <footer>
+    <div id="footerHere"> </div>
   </footer>
 </html>
