working on chernobyl page
added image to chernobyl page,

working on footer problems

--- a/chernobyl.html
+++ b/chernobyl.html
@@ -7,11 +7,13 @@
     <link rel="icon" href="images/ukraine.png">
     <script src="JS/header.js"></script>
     <script src="JS/footer.js"></script>
+    <script src="JS/chernobyl.js"></script>
     <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="CSS/chernobyl.css" />
 
     <div class="top">
       <div id="headerHere"></div>
-Chernobyl is in Ukraine
+      <div id="reactorInsert"></div>
 
 
     </div>
@@ -21,6 +23,10 @@ Chernobyl is in Ukraine
   </body>
 
   <footer>
-    <div id="footerHere"> </div>
+    <div class="bottom">
+
+      test
+      <div id="footerHere"> </div>
+    </div>
   </footer>
 </html>
