--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 
   </body>
   <footer>
-      <div></div>
-      <div id="footerHere"></div>
+    <div class="bottom">
+
+      test
+      <div id="footerHere"> </div>
+    </div>
   </footer>
 
 </html>
