--- a/moldova.html
+++ b/moldova.html
@@ -21,6 +21,10 @@ Moldova is in Ukraine
   </body>
 
   <footer>
-    <div id="footerHere"> </div>
+    <div class="bottom">
+
+      test
+      <div id="footerHere"> </div>
+    </div>
   </footer>
 </html>
