--- a/index.html
+++ b/index.html
@@ -10,26 +10,23 @@
   <header>
     <div class="top">
       <div id="headerHere"></div>
-      <div id="slavaLeft"></div>
-        <div id="ukraineIntro">
-          <div id="border" />
-                <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
-                <p>This website is create from the pure love for ukraine,
-                <br/> on this website you shall find all places that capture my interest.
-                </p>
-                <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
-        </div>
-      <div id="slavaRgiht" />
-
+      <div id="ukraineIntro">
+        <div id="border" />
+              <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
+              <p>This website is create from the pure love for ukraine,
+              <br/> on this website you shall find all places that capture my interest.
+              </p>
+              <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
+      </div>
     </div>
   </header>
   <body>
-
+    <div class="pageContent">
+      
+    </div>
   </body>
   <footer>
     <div class="bottom">
-
-      test
       <div id="footerHere"> </div>
     </div>
   </footer>
