--- a/chernobyl.html
+++ b/chernobyl.html
@@ -12,20 +12,19 @@
     <link rel="stylesheet" href="CSS/chernobyl.css" />
 
     <div class="top">
-      <div id="headerHere"></div>
-      <div id="reactorInsert"></div>
-
-
+    <div id="headerHere"></div>
+    <h1> Chernobyl Nuclear plant. </h1>
     </div>
-  </header>
-  <body>
 
+  </header>
+
+  <body>
+    
+    <div id="reactorInsert"></div>
   </body>
 
   <footer>
     <div class="bottom">
-
-      test
       <div id="footerHere"> </div>
     </div>
   </footer>
