still formatting the damn header and footer
attempting to use css tables to position header and footer

--- a/chernobyl.html
+++ b/chernobyl.html
@@ -10,17 +10,18 @@
     <script src="JS/chernobyl.js"></script>
     <link rel="stylesheet" href="CSS/main.css" />
     <link rel="stylesheet" href="CSS/chernobyl.css" />
+  </header>
+
+  <body class="frame">
 
     <div class="top">
     <div id="headerHere"></div>
     <h1> Chernobyl Nuclear plant. </h1>
     </div>
 
-  </header>
-
-  <body>
-    
-    <div id="reactorInsert"></div>
+    <div id="pageContent">
+      <div id="reactorInsert"></div>
+    </div>
   </body>
 
   <footer>
