--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <meta charset="utf-8" />
-  <meta name="author" content="Benjamin Fedorak" />
-  <title> Uke Hub </title>
-  <link rel="icon" href="images/ukraine.png">
-  <script src="JS/header.js"></script>
-  <script src="JS/footer.js"></script>
-  <link rel="stylesheet" href="CSS/main.css" />
   <header>
+    <meta charset="utf-8" />
+    <meta name="author" content="Benjamin Fedorak" />
+    <title> Uke Hub </title>
+    <link rel="icon" href="images/ukraine.png">
+    <script src="JS/header.js"></script>
+    <script src="JS/footer.js"></script>
+    <link rel="stylesheet" href="CSS/main.css" />
+  </header>
+
+  <body class="frame">
     <div class="top">
       <div id="headerHere"></div>
-      <div id="ukraineIntro">
-        <div id="border" />
-              <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
-              <p>This website is create from the pure love for ukraine,
-              <br/> on this website you shall find all places that capture my interest.
-              </p>
-              <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
+    </div>
+      <div id="pageContent">
+        <div id="slavaLeft"/>
+          <div id="ukraineIntro">
+            <div id="border">
+                  <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
+                  <p>
+                    This website is create from the pure love for ukraine,
+                  <br/>
+                   on this website you shall find all places that capture my interest.
+                  </p>
+                  <p id="slava"> SLAVA UKRAINE!!! SLAVA UKRAINE!!! </p>
+            </div>
+          </div>
+        <div id="slavaRight"/>
       </div>
-    </div>
-  </header>
-  <body>
-    <div class="pageContent">
-      
-    </div>
+
+
   </body>
   <footer>
     <div class="bottom">
-      <div id="footerHere"> </div>
+      <div id="footerHere">
+      <br/>
+      </div>
     </div>
   </footer>
 
