--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" id="wholePage">
   <header>
     <meta charset="utf-8" />
     <meta name="author" content="Benjamin Fedorak" />
@@ -8,9 +8,13 @@
     <script src="JS/header.js"></script>
     <script src="JS/footer.js"></script>
     <link rel="stylesheet" href="CSS/main.css" />
+	      <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous">
+   		  </script>
   </header>
 
-  <body class="frame">
+  <body id="frame">
 
     <div class="top">
       <div id="headerHere"></div>
@@ -34,11 +38,10 @@
 
 
   </body>
+	
   <footer>
     <div class="bottom" >
-      <div id="footerHere">
-      <br/>
-      </div>
+      <div id="footerHere"></div>
     </div>
   </footer>
 
