--- a/chernobyl.html
+++ b/chernobyl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" id="wholePage">
   <header>
     <meta charset="utf-8">
     <meta name="author" content="Benjamin Fedorak" />
@@ -10,18 +10,24 @@
     <script src="JS/chernobyl.js"></script>
     <link rel="stylesheet" href="CSS/main.css" />
     <link rel="stylesheet" href="CSS/chernobyl.css" />
+	      <link rel="stylesheet" href="CSS/main.css" />
+	      <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous">
+   		  </script>
   </header>
 
-  <body class="frame">
+  <body id="frame">
 
     <div class="top">
     <div id="headerHere"></div>
-    <h1> Chernobyl Nuclear plant. </h1>
+    
     </div>
 
     <div id="pageContent">
+		<h1> Chernobyl Power plant </h1>
       <div id="reactorInsert"></div>
-    </div>
+	</div>
   </body>
 
   <footer>
