--- a/moldova.html
+++ b/moldova.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" id="wholePage">
   <header>
     <meta charset="utf-8">
     <meta name="author" content="Benjamin Fedorak" />
