Footer successfully formatted
footer now changes behaviour relative to page to window size, will decide whether or not to be an absolute or static object

Note: this needs to be smoothed out, as padding from above elements do not affect absolute elements. due to this, there is a sudden change from an absolute object to a static object

--- a/moldova.html
+++ b/moldova.html
@@ -8,22 +8,21 @@
     <script src="JS/header.js"></script>
     <script src="JS/footer.js"></script>
     <link rel="stylesheet" href="CSS/main.css" />
-
-    <div class="top">
-      <div id="headerHere"></div>
-Moldova is in Ukraine
-
-
-    </div>
+	      <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous">
+   		  </script>
   </header>
   <body>
+    <div class="top">
+    <div id="headerHere"></div>
+	Moldova is in Ukraine
 
+    </div>
   </body>
 
   <footer>
     <div class="bottom">
-
-      test
       <div id="footerHere"> </div>
     </div>
   </footer>
