--- a/moldova.html
+++ b/moldova.html
@@ -16,7 +16,8 @@
   <body>
     <div class="top">
     <div id="headerHere"></div>
-	Moldova is in Ukraine
+    </div>
+    <div id="pageContent">
 
     </div>
   </body>
