--- a/crimea.html
+++ b/crimea.html
@@ -7,7 +7,9 @@
     <link rel="icon" href="images/ukraine.png">
     <script src="JS/header.js"></script>
     <script src="JS/footer.js"></script>
+    <script src="JS/crimea.js"></script>
     <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="CSS/crimea.css" />
 	      <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous">
@@ -16,8 +18,13 @@
   <body>
     <div class="top">
     <div id="headerHere"></div>
-	Crimea is in Ukraine
+    </div>
 
+    <div id="pageContent">
+          <div id="crimeaQuestionarre">
+              <h1> Are you ready to take a Crimea quiz?</h1>
+              <button id="quizStart" onclick="function()"> Take quiz now! </button>
+          </div>
     </div>
   </body>
 
