--- a/crimea.html
+++ b/crimea.html
@@ -23,7 +23,7 @@
     <div id="pageContent">
           <div id="crimeaQuestionarre">
               <h1> Are you ready to take a Crimea quiz?</h1>
-              <button id="quizButton" onclick="function()"> Take quiz now! </button>
+              <button id="quizButton" onclick="click()"> Take quiz now! </button>
           </div>
     </div>
   </body>
