--- a/crimea.html
+++ b/crimea.html
@@ -21,10 +21,14 @@
     </div>
 
     <div id="pageContent">
+
           <div id="crimeaQuestionarre">
-              <h1> Are you ready to take a Crimea quiz?</h1>
-              <button id="quizButton" onclick="click()"> Take quiz now! </button>
+              <div id="formSpace">
+                <h1> Are you ready to take a Crimea quiz?</h1>
+              </div>
+              <button type="button" id="quizButton" onclick="click()"> Take quiz now! </button>
           </div>
+
     </div>
   </body>
 
